Fix dark mode selection

--- a/assets/main.css
+++ b/assets/main.css
@@ -216,6 +216,10 @@ footer {
     color: #000;
     forced-color-adjust: none;
   }
+
+  .top-bar-section li.active:not(.has-form) a:not(.button):hover {
+    color: #fff;
+  }
 }
 
 .top-bar-section .has-dropdown > a:after {
